# HearDPredisction_ASI

./: .gitignore  README.md  heart_disease.ipynb
.dvc/: .gitignore  config
.ipynb_checkpoints/: heart_disease-checkpoint.ipynb
heart-disease-asi/: .gitignore  heart_disease.py  setup.py  setup.py.dvc
heart-disease-asi/heart_disease_asi.egg-info/: PKG-INFO  SOURCES.txt
heart-disease-asi/kedro-heart-disease/src/: pyproject.toml
kedro-heart-disease/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  stats.json
kedro-heart-disease/conf/base/: catalog.yml  parameters.yml  parameters_create_models.yml  parameters_kedro_heart_disease.yml  parameters_pycaret_heart_disease.yml
kedro-heart-disease/src/: main.py  pyproject.toml  requirements.txt
kedro-heart-disease/src/kedro_heart_disease/: nodes.py  pipeline.py  pipeline_registry.py  settings.py
kedro-heart-disease/src/kedro_heart_disease/pipelines/create_models/: __init__.py  nodes.py  pipeline.py
kedro-heart-disease/src/kedro_heart_disease/pipelines/kedro_heart_disease/: __init__.py  nodes.py  pipeline.py
kedro-heart-disease/src/kedro_heart_disease/pipelines/pycaret_heart_disease/: __init__.py  nodes.py  pipeline.py
kedro-heart-disease/src/tests/: test_run.py
kedro-heart-disease/src/tests/pipelines/create_models/: test_pipeline.py
kedro-heart-disease/src/tests/pipelines/kedro_heart_disease/: test_pipeline.py
kedro-heart-disease/src/tests/pipelines/pycaret_heart_disease/: test_pipeline.py
python-package/: .gitignore  heart_disease.py  heart_disease.py.dvc
(+12 files in other folders)
