[tool.kedro]
package_name = "kedro_heart_disease"
project_name = "kedro-heart-disease"
kedro_init_version = "0.19.1"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kedro_heart_disease"
version = "0.1"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
exclude = ["tests"]

[project.scripts]
kedro-heart-disease = "kedro_heart_disease.__main__:main"

[project.optional-dependencies]
docs = [
    "docutils<0.18.0",
    "sphinx~=3.4.3",
    "sphinx_rtd_theme==0.5.1",
    "nbsphinx==0.8.1",
    "nbstripout~=0.4",
    "sphinx-autodoc-typehints==1.11.1",
    "sphinx_copybutton==0.3.1",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.1.0",
    "myst-parser~=0.17.2",
]

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
